Add ignore for SpecFlow

--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,7 @@ fabric.properties
 .idea/caches/build_file_checksums.ser
 
 # End of https://www.toptal.com/developers/gitignore/api/dotnetcore,rider
+
+# SpecFlow
+*.feature.cs
+*.feature.xlsx.*
